--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<div class="quen-mat-khau">Quên mật khẩu ?</div>
 			</div>
 		</div>
+	</div>
+</div>
 <body>
 	<div class="body" style="display:block">
 		<div class="header">
